# follow-the-leaders

./: .gitignore  README.md  pyproject.toml
follow_the_leaders/: __init__.py  _logger.py  backtester.py  cli.py  controller.py  filing_tracker.py  filings_fetcher.py  form_13f_comparator.py  form_13f_fetcher.py  main.py  telegram_alerter.py
research/: backtesting_assets.ipynb
